添加层相关diamante